...
    },
    "context.work": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Work"
          }
        },
        "ro": {
          "stringUnit": {
            "state": "translated",
            "value": "Muncă"
...
